--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
-django
-dataclasses= 0.7
-djangorestframework
+dataclasses==0.7
+whitenoise==4.0
+certifi==2018.8.24
+chardet==3.0.4
+idna==2.7
+psycopg2==2.7.5
+django-heroku==0.3.1
+asgiref==3.2.10
+dj-database-url==0.5.0
+Django==3.0.8
+djangorestframework==3.11.0
+gunicorn==20.0.4
+pytz==2020.1
+sqlparse==0.3.1
