--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
-django
-dataclasses= 0.7
-djangorestframework
+asgiref==3.2.10
+certifi==2020.6.20
+chardet==3.0.4
+dj-database-url==0.5.0
+Django==2.2.7
+django-heroku==0.3.1
+djangorestframework==3.11.0
+gunicorn==20.0.4
+idna==2.10
+psycopg2==2.7.5
+pytz==2020.1
+sqlparse==0.3.1
+whitenoise==5.1.0
