--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.2.10
+attrs==19.3.0
 certifi==2020.6.20
 chardet==3.0.4
 dj-database-url==0.5.0
@@ -7,7 +8,19 @@ django-heroku==0.3.1
 djangorestframework==3.11.0
 gunicorn==20.0.4
 idna==2.10
+importlib-metadata==1.7.0
+iniconfig==1.0.1
+more-itertools==8.4.0
+packaging==20.4
+pluggy==0.13.1
 psycopg2==2.7.5
+py==1.9.0
+pyparsing==2.4.7
+pytest==6.0.1
+pytest-django==3.9.0
 pytz==2020.1
+six==1.15.0
 sqlparse==0.3.1
+toml==0.10.1
 whitenoise==5.1.0
+zipp==3.1.0
